--- a/assets/scss/components/_pagination.scss
+++ b/assets/scss/components/_pagination.scss
@@ -1,5 +1,5 @@
 .pagination {
-    margin: 0 0 40px;
+    margin: 0 0 60px;
 }
 
 .posts.index {
