--- a/assets/scss/components/_search.scss
+++ b/assets/scss/components/_search.scss
@@ -33,7 +33,7 @@
     word-wrap: break-word;
     border: 1px solid $white;
     border-radius: 5px;
-    margin: 0 10%;
+    margin: 20px 10%;
 
     > h2,
     > h4 {
